
*** THESE CHANGES MIGHT BREAK COMPATIBILITY WITH OLDER PATCHES ***

- bach.roll, bach.score
		There's a new @applyslope attribute, by default set to 1, 
			that applies range slopes in function slots automatically
			to function segments or curves, to account for slot range slope
		Your patches might then sound different than previously!
			if you did NOT want this, simply set @applyslope to 0.


***********************
*** VERSION CHANGES ***
***********************

- all objects	Fixed issues with negative midicents

- bach.recurser	New object

- bach.roll, bach.score
		Now "dynamics2velocities" handles breakpoints
		Fixed bug causing wrong breakpoint handling for "dynamics2velocities" in some situations
		Added "part" as a possible variable for selection expressions
		Added support for removing duplicate annotation (see #annotation+duplicates)

- bach.score	Fixed possible crashes with "inscreenmeas"
		Fixed possible crashes in rare scenarios when the score was hidden.

- bach.n2mc	Now handles pitches as well 
			(this entailed compatibility breaks with older patches, but such issues is now fixed)




v0.8b

******************************************************************
*** VERY IMPORTANT: A FEW THINGS YOU SHOULD REALLY REALLY KNOW ***
******************************************************************

- All objects			Diatonic PITCHES are now accepted and arithmetics can be performed on them
					They can be entered via ANGLOSAXON note names only: C5 (middle C), D#4, Fb3, C+1/16t, 
					C5 is now ALWAYS the middle C
					Please modify your patches accordingly, if you relied on other values or on latin names

- All objects       The behavior of backticks in the text-format llll output has changed:
                        now the first item of an llll doesn't get a backtick any longer if it is the name of an attribute of a bach object.